Update Gemfile to use github-pages for better compatibility, add webrick, and create new interactive coding features with Pyodide and Klipse. Add two new posts on linear regression and model regularization, along with necessary HTML and CSS files for styling and functionality. Include a feed and sitemap for better site navigation.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,10 @@ layout: default
   {%- if site.disqus.shortname -%}
     {%- include disqus_comments.html -%}
   {%- endif -%}
+
+  {%- if page.use_pyodide -%}
+    {%- include pyodide.html -%}
+  {%- endif -%}
 </article>
 
 <!-- MathJax Configuration -->
